# BookTranslationProcessor

./: .replit  INSTALLATION.md  README.md  api_routes.py  app.py  batch_processor.py  dependencies.txt  figure_analyzer.py  gunicorn_config.py  image_preprocessor.py  logger_config.py  main.py  models.py  pdf_generator.py  poker_book_processor.py  processing_service.py  processing_service_middle.txt  processing_service_part1.txt  processing_service_part2.txt  pyproject.toml  routes.py  setup.sh  test_dejavu_font.py  test_pdf_reportlab.py  test_russian_encoding.py  text_extractor.py  text_sanitizer.py  translation_manager.py  utils.py
attached_assets/: Pasted--SWASED-ECD-CEE-Eo-ea-Fn-i--1745703779577.txt  Pasted--SWASED-ECD-CEE-Eo-ea-Fn-i-1745814974417.txt  Pasted--venv-base-analityk-ofis-github-BookTranslationProcessor-BookTranslationProcessor-gu-1745856455496.txt  Pasted-025-04-28-17-18-00-900-app-INFO-uploads-1-18-page-0004-png-2025-04-2-1745850201036.txt  Pasted-1--1745561272620.txt  Pasted-25-04-28-17-58-58-224-app-INFO-uploads-2-8-page-0012-png-2025-04-28--1745852369562.txt  poker_book_processor.py  test_ocr.py
instance/: poker_book.db
output/book_1/cache/: translation_cache.json
output/book_1/text/: 1_0_page_0199_20250425_124023_structure.json  1_1_page_0198_20250425_124047_structure.json  1_2_page_0197_20250425_124105_corrected.txt  (+5 more)
output/encoding_test/: russian_test.json  russian_test.txt
static/css/: styles.css
static/js/: chunked-upload.js  main.js
templates/: book.html  error.html  index.html  layout.html  page.html  read.html  upload.html
(+541 files in other folders)
